unpackaged/main/default/objects/QS_RAID_Log__c/QS_RAID_Log__c.object-meta.xml
<CustomObject>
    <description>BOSS - Action item tracking object</description>
    <label>RAID Log</label>
    <nameField>
        <displayFormat>RAID-{0000}</displayFormat>
        <label>RAID ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RAID Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>