unpackaged/main/default/objects/QS_RAID_Log__c/fields/QS_Action_Done__c.field-meta.xml
<CustomField>
    <fullName>QS_Action_Done__c</fullName>
    <description>Action taken to close on the action item.</description>
    <inlineHelpText>Please enter steps/resolution details, required to close a task.</inlineHelpText>
    <label>Action Done</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>