unpackaged/main/default/objects/QS_RAID_Log__c/fields/QS_Additional_Decision_Makers__c.field-meta.xml
<CustomField>
    <fullName>QS_Additional_Decision_Makers__c</fullName>
    <description>Names of additional team members involved in making this decision</description>
    <inlineHelpText>Enter the names of additional team members involved in making this decision</inlineHelpText>
    <label>Additional Decision Makers</label>
    <type>TextArea</type>
</CustomField>