unpackaged/main/default/objects/QS_RAID_Log__c/fields/QS_Am_I_Assigned_Owner__c.field-meta.xml
<CustomField>
    <fullName>QS_Am_I_Assigned_Owner__c</fullName>
    <description>Is the logged in user the same as the Primary Owner of the Action Item. If yes = true, no = false... Not to be on the page layout but can be used for dynamic List Views</description>
    <formula>QS_Primary_Owner__r.Id = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is the logged in user the same as the Primary Owner of the Action Item.</inlineHelpText>
    <label>Am I Assigned Owner?</label>
    <type>Checkbox</type>
</CustomField>