unpackaged/main/default/objects/QS_RAID_Log__c/fields/QS_Contingency_Plan__c.field-meta.xml
<CustomField>
    <fullName>QS_Contingency_Plan__c</fullName>
    <label>Contingency Plan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>