unpackaged/main/default/objects/QS_RAID_Log__c/fields/QS_Days_Open__c.field-meta.xml
<CustomField>
    <fullName>QS_Days_Open__c</fullName>
    <description>Days that an Action Item has been open.</description>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>