unpackaged/main/default/objects/QS_RAID_Log__c/fields/QS_Description__c.field-meta.xml
<CustomField>
    <fullName>QS_Description__c</fullName>
    <label>Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>