unpackaged/main/default/objects/QS_RAID_Log__c/fields/QS_Development_Cycle__c.field-meta.xml
<CustomField>
    <fullName>QS_Development_Cycle__c</fullName>
    <formula>text(QS_Requirements__r.QS_Development_Sprint__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Development Cycle</label>
    <type>Text</type>
</CustomField>