unpackaged/main/default/objects/QS_RAID_Log__c/fields/QS_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>QS_Due_Date__c</fullName>
    <label>Resolution Date</label>
    <type>Date</type>
</CustomField>