unpackaged/main/default/objects/QS_RAID_Log__c/fields/QS_Impact__c.field-meta.xml
<CustomField>
    <fullName>QS_Impact__c</fullName>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <color>#33CC00</color>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <color>#FFCC66</color>
                <label>Medium</label>
            </value>
            <value>
                <fullName>High</fullName>
                <color>#FF0000</color>
                <label>High</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>