unpackaged/main/default/objects/QS_RAID_Log__c/fields/QS_Likelihood__c.field-meta.xml
<CustomField>
    <fullName>QS_Likelihood__c</fullName>
    <description>The probability that the risk, as identified, will happen</description>
    <inlineHelpText>The probability that the risk, as identified, will happen</inlineHelpText>
    <label>Likelihood</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>