unpackaged/main/default/objects/QS_RAID_Log__c/fields/QS_Name__c.field-meta.xml
<CustomField>
    <fullName>QS_Name__c</fullName>
    <label>Title</label>
    <type>TextArea</type>
</CustomField>