unpackaged/main/default/objects/QS_RAID_Log__c/fields/QS_Primary_Group__c.field-meta.xml
<CustomField>
    <fullName>QS_Primary_Group__c</fullName>
    <inlineHelpText>What group the action item falls under</inlineHelpText>
    <label>Primary Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>VCG</fullName>
            </value>
            <value>
                <fullName>Salesforce CPQ</fullName>
            </value>
            <value>
                <fullName>QS Deployment</fullName>
            </value>
            <value>
                <fullName>Other Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>