unpackaged/main/default/objects/QS_RAID_Log__c/fields/QS_Primary_Owner__c.field-meta.xml
<CustomField>
    <fullName>QS_Primary_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QS_Action_Items</relationshipName>
    <type>Lookup</type>
</CustomField>