unpackaged/main/default/objects/QS_RAID_Log__c/fields/QS_Primary_Track__c.field-meta.xml
<CustomField>
    <fullName>QS_Primary_Track__c</fullName>
    <label>Primary Track</label>
    <referenceTo>QS_Track__c</referenceTo>
    <relationshipLabel>RAID Logs</relationshipLabel>
    <relationshipName>Action_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>