unpackaged/main/default/objects/QS_RAID_Log__c/fields/QS_Requirements__c.field-meta.xml
<CustomField>
    <fullName>QS_Requirements__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Requirement</label>
    <referenceTo>QS_Requirements__c</referenceTo>
    <relationshipLabel>RAID Logs</relationshipLabel>
    <relationshipName>QS_Action_Items</relationshipName>
    <type>Lookup</type>
</CustomField>