unpackaged/main/default/objects/QS_RAID_Log__c/fields/QS_Test_Scenario__c.field-meta.xml
<CustomField>
    <fullName>QS_Test_Scenario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Scenario</label>
    <referenceTo>QS_Test_Scenario__c</referenceTo>
    <relationshipName>Action_Items</relationshipName>
    <type>Lookup</type>
</CustomField>