unpackaged/main/default/objects/QS_RAID_Log__c/fields/QS_User_Story__c.field-meta.xml
<CustomField>
    <fullName>QS_User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Process</label>
    <referenceTo>QS_User_Story__c</referenceTo>
    <relationshipLabel>RAID Logs</relationshipLabel>
    <relationshipName>Action_Items</relationshipName>
    <type>Lookup</type>
</CustomField>