unpackaged/main/default/objects/QS_RAID_Log__c/fields/Raid_Log__c.field-meta.xml
<CustomField>
    <fullName>Raid_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Action item is tied to the following Key Decision RAID Log</description>
    <inlineHelpText>Action item is tied to the following Key Decision RAID Log</inlineHelpText>
    <label>RAID Log</label>
    <referenceTo>QS_RAID_Log__c</referenceTo>
    <relationshipLabel>Linked RAID items</relationshipLabel>
    <relationshipName>Decision_Action_Items</relationshipName>
    <type>Lookup</type>
</CustomField>