unpackaged/main/default/objects/QS_RAID_Log__c/fields/Risk_Mitigation_Plan__c.field-meta.xml
<CustomField>
    <fullName>Risk_Mitigation_Plan__c</fullName>
    <label>Risk Mitigation Plan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>