unpackaged/main/default/objects/QS_RAID_Log__c/recordTypes/Action_Item.recordType-meta.xml
<RecordType>
    <fullName>Action_Item</fullName>
    <active>true</active>
    <description>A task or to-do item needed on the project</description>
    <label>Action Item</label>
</RecordType>