unpackaged/main/default/objects/QS_RAID_Log__c/recordTypes/Decision.recordType-meta.xml
<RecordType>
    <fullName>Decision</fullName>
    <active>true</active>
    <description>Denotes key agreed upon decisions within the project</description>
    <label>Decision</label>
</RecordType>