unpackaged/main/default/objects/QS_RAID_Log__c/recordTypes/Issue.recordType-meta.xml
<RecordType>
    <fullName>Issue</fullName>
    <active>true</active>
    <description>A problem that needs to be considered and addressed by the group</description>
    <label>Issue</label>
</RecordType>