unpackaged/main/default/objects/QS_RAID_Log__c/recordTypes/Risk.recordType-meta.xml
<RecordType>
    <fullName>Risk</fullName>
    <active>true</active>
    <description>Events that can have an adverse impact if they occur. Risks differ from issues; risks are issues that haven’t happened yet.</description>
    <label>Risk</label>
</RecordType>