unpackaged/main/default/objects/QS_RAID_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>QS_Due_Date__c</columns>
    <columns>QS_Type__c</columns>
    <columns>QS_Status__c</columns>
    <columns>QS_Name__c</columns>
    <columns>QS_Primary_Owner__c</columns>
    <columns>QS_Priority__c</columns>
    <columns>QS_User_Story__c</columns>
    <columns>QS_Requirements__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Action Items</label>
</ListView>