unpackaged/main/default/objects/QS_RAID_Log__c/listViews/All_In_Progress_Action_Items.listView-meta.xml
<ListView>
    <fullName>All_In_Progress_Action_Items</fullName>
    <columns>NAME</columns>
    <columns>QS_Type__c</columns>
    <columns>QS_Status__c</columns>
    <columns>QS_Name__c</columns>
    <columns>QS_Primary_Track__c</columns>
    <columns>QS_Priority__c</columns>
    <columns>QS_User_Story__c</columns>
    <columns>QS_Requirements__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QS_Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>All In Progress Action Items</label>
</ListView>