unpackaged/main/default/objects/QS_RAID_Log__c/listViews/All_Overdue_Action_Items.listView-meta.xml
<ListView>
    <fullName>All_Overdue_Action_Items</fullName>
    <columns>NAME</columns>
    <columns>QS_Type__c</columns>
    <columns>QS_Due_Date__c</columns>
    <columns>QS_Name__c</columns>
    <columns>QS_Primary_Owner__c</columns>
    <columns>QS_Status__c</columns>
    <columns>QS_Priority__c</columns>
    <columns>QS_User_Story__c</columns>
    <columns>QS_Requirements__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QS_Due_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>QS_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>All Overdue Action Items</label>
</ListView>