unpackaged/main/default/objects/QS_RAID_Log__c/listViews/All_Raid_Logs.listView-meta.xml
<ListView>
    <fullName>All_Raid_Logs</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>QS_Due_Date__c</columns>
    <columns>QS_Type__c</columns>
    <columns>QS_Status__c</columns>
    <columns>QS_Name__c</columns>
    <columns>QS_Primary_Owner__c</columns>
    <columns>QS_Priority__c</columns>
    <columns>QS_Primary_Track__c</columns>
    <columns>QS_User_Story__c</columns>
    <columns>QS_Requirements__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>QS_RAID_Log__c.Risk</value>
    </filters>
    <label>All Raid Logs</label>
</ListView>