unpackaged/main/default/objects/QS_RAID_Log__c/listViews/QS_Action_Items_Due_this_Week.listView-meta.xml
<ListView>
    <fullName>QS_Action_Items_Due_this_Week</fullName>
    <columns>NAME</columns>
    <columns>QS_Due_Date__c</columns>
    <columns>QS_Type__c</columns>
    <columns>QS_Status__c</columns>
    <columns>QS_Name__c</columns>
    <columns>QS_Primary_Owner__c</columns>
    <columns>QS_Priority__c</columns>
    <columns>QS_Primary_Track__c</columns>
    <columns>QS_User_Story__c</columns>
    <columns>QS_Requirements__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>QS_RAID_Log__c.Action_Item</value>
    </filters>
    <filters>
        <field>QS_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>QS_Am_I_Assigned_Owner__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Action Items - Due this Week</label>
</ListView>