unpackaged/main/default/objects/QS_RAID_Log__c/listViews/QS_Issues_Opened.listView-meta.xml
<ListView>
    <fullName>QS_Issues_Opened</fullName>
    <columns>NAME</columns>
    <columns>QS_Type__c</columns>
    <columns>QS_Status__c</columns>
    <columns>QS_Impact__c</columns>
    <columns>QS_Name__c</columns>
    <columns>QS_Description__c</columns>
    <columns>QS_Primary_Owner__c</columns>
    <columns>QS_Due_Date__c</columns>
    <columns>QS_Primary_Track__c</columns>
    <columns>QS_Requirements__c</columns>
    <columns>QS_User_Story__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>QS_RAID_Log__c.Issue</value>
    </filters>
    <filters>
        <field>QS_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Issues- Open Issues</label>
</ListView>