unpackaged/main/default/objects/QS_RAID_Log__c/listViews/QS_Key_Decisions_Opened_Decisions.listView-meta.xml
<ListView>
    <fullName>QS_Key_Decisions_Opened_Decisions</fullName>
    <columns>NAME</columns>
    <columns>QS_Type__c</columns>
    <columns>QS_Status__c</columns>
    <columns>QS_Name__c</columns>
    <columns>QS_Description__c</columns>
    <columns>QS_Primary_Owner__c</columns>
    <columns>QS_Additional_Decision_Makers__c</columns>
    <columns>QS_Due_Date__c</columns>
    <columns>QS_Primary_Track__c</columns>
    <columns>QS_Requirements__c</columns>
    <columns>QS_User_Story__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QS_Status__c</field>
        <operation>notEqual</operation>
        <value>Approved,Rejected</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>QS_RAID_Log__c.Decision</value>
    </filters>
    <label>Key Decisions - Open Decisions</label>
</ListView>